# adorn

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-06-24-adorn-engine.md  2026-06-24-adorn-init-and-errors.md  2026-06-24-adorn-saturation-floor.md  2026-06-25-adorn-features.md  2026-06-25-adorn-materialize-rework.md  2026-06-25-adorn-scheme-colors.md  2026-06-27-theme-overrides.md
docs/specs/: 2026-06-24-adorn-design.md  2026-06-27-adorn-shell-design.md  2026-06-27-theme-overrides-design.md
src/adorn/: __main__.py  catalog.py  cli.py  color.py  commands.py  compile.py  extract.py  manifest.py  palette.py  reload.py  render.py
tests/: test_alter.py  test_catalog.py  test_color.py  test_commands.py  test_compile.py  test_extract.py  test_init.py  test_manifest.py  test_palette.py  test_reload.py  test_render.py  test_saturation.py  test_smoke.py
