[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adorn"
version = "0.1.0"
description = "Automated Desktop Ornamentation & Recoloring eNgine — wallpaper-driven multi-surface desktop theming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jinja2>=3.0"]

[project.scripts]
adorn = "adorn.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/adorn"]
